# tesserae-device-esp32-bin

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini
include/: app_config.h  secrets.example.h
src/: CMakeLists.txt  epd_driver.c  heartbeat.c  heartbeat.h  main.c  mqtt_config.c  mqtt_config.h  mqtt_handler.c  mqtt_handler.h  provisioning.c  provisioning.h  wifi_manager.c  wifi_manager.h
tools/: gen_splash.py  release.sh
